--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             personas:
                 [
                     { nombre: 'Daniel', apellido: 'Sánchez', dni: 20442873, correo: 'danielsanchez68@hotmail.com' },
-                    
+                    { nombre: 'Mariano Ariel', apellido: 'Toppino', dni: 123123123, correo: 'correofalso@hotmail.com' },
                     //Agregar aquí nombre, apellido, dni y correo en formato objeto 
                 ]
         },
